# ros2_marine_robotic_arm

./: .gitmodules  README.md  WORK_SUMMARY.md
robo_arm2_ws/: fastdds_no_shm.xml  rebuild.sh  start.sh
robo_arm2_ws/src/robo_arm2_control/: CMakeLists.txt  package.xml
robo_arm2_ws/src/robo_arm2_control/launch/: auto_control.launch.py
robo_arm2_ws/src/robo_arm2_control/scripts/: auto_control.py
robo_arm2_ws/src/robo_arm2_description/: CMakeLists.txt  package.xml
robo_arm2_ws/src/robo_arm2_description/launch/: display.launch.py
robo_arm2_ws/src/robo_arm2_description/rviz/: control.rviz  display.rviz
robo_arm2_ws/src/robo_arm2_description/urdf/: robo_arm2.gazebo.xacro  robo_arm2.urdf.xacro
robo_arm2_ws/src/robo_arm2_gazebo/: CMakeLists.txt  package.xml
robo_arm2_ws/src/robo_arm2_gazebo/config/: ros2_control.yaml
robo_arm2_ws/src/robo_arm2_gazebo/launch/: gazebo.launch.py
robo_arm2_ws/src/robo_arm2_gazebo/scripts/: gz_bridge_node.py
robo_arm2_ws/src/robo_arm2_gazebo/worlds/: empty.sdf
robo_arm2_ws/src/robo_arm2_teleop/: CMakeLists.txt  package.xml
robo_arm2_ws/src/robo_arm2_teleop/launch/: manual_control.launch.py
robo_arm2_ws/src/robo_arm2_teleop/scripts/: manual_control.py
src/: kuka_
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/launch/: run_control.launch.py
src/arm_control/src/: follow_point.cpp
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/urdf/: quadrotor.urdf.xacro
src/kuka_landing_control/: CMakeLists.txt  package.xml
src/kuka_landing_control/launch/: landing_platform.rviz  marine_landing.launch.py
src/kuka_landing_control/scripts/: scale_mass.py
src/kuka_landing_control/src/: landing_tracker.cpp  pose_sync.cpp
src/kuka_landing_control/srdf/: integrated_arm.srdf.xacro
src/kuka_landing_control/urdf/: kuka_gazebo_free.urdf.xacro  kuka_standalone.urdf.xacro  simple_3dof_arm.urdf.xacro  wamv_base_local.urdf.xacro  wamv_kuka_bullet.urdf.xacro  wamv_kuka_integrated.urdf.xacro  wamv_kuka_visuals.urdf  wamv_light.urdf.xacro  wamv_only.urdf.xacro  wamv_parent.urdf.xacro  wamv_simple_arm.urdf  wamv_with_kuka.urdf.xacro
src/kuka_landing_control/worlds/: marine_world.sdf  test_no_water.sdf
src/marine_arm_description/: CMakeLists.txt  package.xml
src/marine_arm_description/launch/: display.launch.py
src/marine_arm_description/urdf/: marine_arm.urdf.xacro
src/marine_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/marine_arm_moveit_config/config/: joint_limits.yaml  marine_arm.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/marine_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/vrx/vrx_gz/models/coast_waves/: model.sdf
src/vrx/vrx_gz/src/: PublisherPlugin.cc  SimpleHydrodynamics.cc  Surface.cc  USVWind.cc
src/vrx/vrx_gz/worlds/: sydney_regatta.sdf
