<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_landing_control</name>
  <version>0.1.0</version>
  <description>Landing platform control: KUKA KR600 tracks drone in real-time for autonomous landing on WAM-V vessel</description>

  <maintainer email="user@example.com">ykb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gz-transport12</depend>
  <depend>gz-msgs9</depend>

  <exec_depend>kuka_fortec_support</exec_depend>
  <exec_depend>kuka_kr_moveit_config</exec_depend>
  <exec_depend>drone_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
