<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_arm2_control</name>
  <version>0.0.1</version>
  <description>Automatic control package for 2-axis robotic arm with IK solver</description>
  <maintainer email="user@example.com">ubuntu22</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>robo_arm2_description</depend>
  <depend>robo_arm2_gazebo</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
